--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,7 +25,18 @@
             <td>
               <% if @book.user == current_user %>
                 <%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%>
-              <% end %>    
+              <% end %>
+            </td>
+            <td>
+              <% if @book.favorited_by?(current_user) %>
+                <%= link_to book_favorite_path(@book), method: :delete do %>
+                  ♥<%= @book.favorites.count %>いいね
+                <% end %>
+              <% else %>
+                <%= link_to book_favorite_path(@book), method: :post do %>
+                  ♡<%= @book.favorites.count %>いいね
+                <% end %>
+              <% end %>
             </td>
         </tr>
       </table>
