--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,9 +10,10 @@
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
-          <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
-            <%= @book.user.name %>
+          <td>
+            <%= link_to(@book.user) do %>
+              <%= image_tag @book.user.get_profile_image(100,100) %><br>
+              <%= @book.user.name %>
             <% end %>
           </td>
           <td><%= link_to @book.title, @book %></td>
@@ -47,7 +48,7 @@
         <tr>
           <td>
             <%= link_to user_path(book_comment.user) do %>
-              <%= image_tag book.book_comment.user.get_profile_image(50,50) %><br>
+              <%= image_tag book_comment.user.get_profile_image(50,50) %><br>
               <%= book_comment.user.name %>
             <% end %>
           </td>
@@ -55,8 +56,8 @@
             <%= book_comment.comment %>
           </td>
           <td>
-            <% if @book_comment.user == current_user %>
-              <%= link_to 'Destroy', @book_comment, method: :delete, class: "btn btn-sm btn-danger"%>
+            <% if book_comment.user == current_user %>
+              <%= link_to 'Destroy', book_book_comment_path(@book), method: :delete, class: "btn btn-sm btn-danger"%>
             <% end %>
           </td>
         </tr> 
