--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,16 +19,6 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
           <td>
-            <% if @book.user == current_user %>
-              <%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %>
-            <% end %>
-          </td>
-          <td>
-            <% if @book.user == current_user %>
-              <%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%>
-            <% end %>
-          </td>
-          <td>
             <% if @book.favorited_by?(current_user) %>
               <%= link_to book_favorite_path(@book), method: :delete do %>
                 ♥<%= @book.favorites.count %>いいね
@@ -39,37 +29,22 @@
               <% end %>
             <% end %>
           </td>
-          <td>コメント数:<%= @book.book_comments.count %></td>
+          <td id="comment_counter">
+            <%= render "book_comments/counter", book: @book %>
+          </td>          
+          <% if @book.user == current_user %>
+            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+          <% end %>
         </tr>
       </table>
       
-      <table>
-        <% @book.book_comments.each do |book_comment| %>
-        <tr>
-          <td>
-            <%= link_to user_path(book_comment.user) do %>
-              <%= image_tag book_comment.user.get_profile_image(50,50) %><br>
-              <%= book_comment.user.name %>
-            <% end %>
-          </td>
-          <td>
-            <%= book_comment.comment %>
-          </td>
-          <td>
-            <% if book_comment.user == current_user %>
-              <%= link_to 'Destroy', book_book_comment_path(@book), method: :delete, class: "btn btn-sm btn-danger"%>
-            <% end %>
-          </td>
-        </tr> 
-        <% end %>
-      </table>
-      
-      <div>
-        <%= form_with model: [@book, @book_comment] do |f| %>
-          <%= f.text_area :comment, rows: '5' %><br>
-          <%= f.submit "送信" %>
-        <% end %>
+      <div id="comment_index">
+        <%= render "book_comments/index", book: @book %>
       </div>
+      
+      <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
+      
     </div>
   </div>
 </div>
