--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,16 +18,8 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <td>
-            <% if @book.favorited_by?(current_user) %>
-              <%= link_to book_favorite_path(@book), method: :delete do %>
-                ♥<%= @book.favorites.count %>いいね
-              <% end %>
-            <% else %>
-              <%= link_to book_favorite_path(@book), method: :post do %>
-                ♡<%= @book.favorites.count %>いいね
-              <% end %>
-            <% end %>
+          <td id="favorite_btn_<%= @book.id %>">
+              <%= render "favorites/btn", book: @book %>
           </td>
           <td id="comment_counter">
             <%= render "book_comments/counter", book: @book %>
