--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -7,17 +7,24 @@
     <%= f.label :opinion %>
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
+
+  <% if book.id.nil? %>
+    <div class="form-group" id="star">
+      <%= f.label :star %>
+      <%= f.hidden_field :star, id:review_star, class: 'form-control' %>
+      <div id="post_raty"></div>
+  </div>
+  <script>
+    // scriptファイルをどのidの部分に配置するかを指定
+    let elem = document.querySelector('#post_raty');
+    let opt = {  
+    //星画像の指定などのオプションをここに記述,
+     };
+    raty(elem,opt);
+  </script>
+    $(document).on()
   <div class="form-group">
     <%= f.submit class: 'btn btn-success' %>
   </div>
   
-  <div id="post_raty"></div>
-    <script>
-      // scriptファイルをどのidの部分に配置するかを指定
-      let elem = document.querySelector('#post_raty');
-      let opt = {  
-      //星画像の指定などのオプションをここに記述,
-       };
-      raty(elem,opt);
-    </script>
 <% end %>
