--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -13,18 +13,32 @@
       <%= f.label :star %>
       <%= f.hidden_field :star, id:review_star, class: 'form-control' %>
       <div id="post_raty"></div>
-  </div>
-  <script>
-    // scriptファイルをどのidの部分に配置するかを指定
-    let elem = document.querySelector('#post_raty');
-    let opt = {  
-    //星画像の指定などのオプションをここに記述,
-     };
-    raty(elem,opt);
-  </script>
-    $(document).on()
-  <div class="form-group">
-    <%= f.submit class: 'btn btn-success' %>
-  </div>
+    </div>
+    <script>
+      // scriptファイルをどのidの部分に配置するかを指定
+      $(document).on('thrbolinks:load', function() {
+        let elem = document.querySelector('#post_raty');
+        if (elem == null) return;
+      
+        elem interHTML = ""
+        let opt = {
+          //星画像の指定などのオプションをここに記述,  
+          starOn: "<%= asset_path('star-on.ong') %>",
+          starOff: "<%= asset_path('star-off.png') %>",
+          starHalf: "<%= asset_path('star-half.png') %>",
+          scoreName: 'book[star]',
+        };
+        raty(elem,opt);
+      });
+    </script>
+  <% else %>
+    <div class="form-group">
+      <%= render "static_rate", book: book %>
+    </div>
+  <% end %>
+    
+    <div class="form-group">
+      <%= f.submit class: 'btn btn-success' %>
+    </div>
   
 <% end %>
