--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -20,6 +20,9 @@
           <%= render "favorites/btn", book: book %>
         </td>
         <td>コメント数:<%= book.book_comments.count %></td>
+        <td>
+          <%= render "static_rate", book: book %>
+        </td>
       </tr>
     <% end %>
   </tbody>
