--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -36,6 +36,11 @@
       <%= render "static_rate", book: book %>
     </div>
   <% end %>
+  
+  <div class:"form-group">
+    <label>Tag</label>
+    <%= f.text_field :category,class: 'form-control book_category' %>
+  </div>
     
     <div class="form-group">
       <%= f.submit class: 'btn btn-success' %>
