--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,7 +4,8 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
-      <th colspan="3"></th>
+      <th>Tag</th>
+      <th colspan="2"></th>
     </tr>
   </thead>
   <tbody>
@@ -26,7 +27,7 @@
         </td>
         <td>コメント数:<%= book.book_comments.count %></td>
         <td>
-          <%= render "static_rate", book: book %>
+          <%= render "books/static_rate", book: book %>
         </td>
       </tr>
     <% end %>
