--- a/app/views/searches/_searchform.html.erb
+++ b/app/views/searches/_searchform.html.erb
@@ -5,4 +5,10 @@
         <%= f.select :method, options_for_select([["完全一致","perfect_match"], ["前方一致","forward_match"], ["後方一致", "backward"], ["部分一致", "partial_match"]]) %>
         <%= f.submit "検索", class: "btn btn-primary" %>
     <% end %>
+    
+    <%= form_with url: tagsearches_search_path, method: :get, local: true do |f| %>
+        <%= f.text_field :content %>
+        <%= f.submit 'タグ検索' %>
+    <% end %>
+    
 <% end %>
